--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tenki-no-ko",
   "version": "0.1.0",
+  "homepage": "https://github.com/huan2903/weatheringWithYou",
   "private": true,
   "dependencies": {
     "@ant-design/icons": "4.0.0",
@@ -44,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
