--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenki-no-ko",
   "version": "0.1.0",
-  "homepage": "https://github.com/huan2903/weatheringWithYou",
+  "homepage": "https://huan2903.github.io/weatheringWithYou/",
   "private": true,
   "dependencies": {
     "@ant-design/icons": "4.0.0",
@@ -25,6 +25,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
